force-app/main/default/objects/Support_Subscription__c/Support_Subscription__c.object-meta.xml
<CustomObject>
    <label>Support Subscription</label>
    <nameField>
        <displayFormat>SN-{000000}</displayFormat>
        <label>Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>