force-app/main/default/objects/Support_Subscription__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Support Subscriptions</relationshipLabel>
    <relationshipName>Support_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>