force-app/main/default/objects/Support_Subscription__c/fields/Support_Plan__c.field-meta.xml
<CustomField>
    <fullName>Support_Plan__c</fullName>
    <label>Support Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>