force-app/main/default/objects/Support_Subscription__c/fields/X24x7_Support__c.field-meta.xml
<CustomField>
    <fullName>X24x7_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>24x7 Support</label>
    <type>Checkbox</type>
</CustomField>